--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Dn-DiceRoller</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="min_value_label">Min value:</string>
+    <string name="die_name_label">Die name:</string>
+    <string name="max_value_label">Max value:</string>
+    <string name="add_dice_group">Add Dice Group</string>
 
 </resources>
